[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/encyclopedia_building_entry_menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://graphics/backgrounds/wyrmsun_sepia.png" type="Texture" id=3]
[ext_resource path="res://scenes/menu_area.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/text_with_shadow.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/icon_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/large_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://shortcut_p.tres" type="ShortCut" id=8]
[ext_resource path="res://scripts/change_scene_button.gd" type="Script" id=9]

[node name="encyclopedia_building_entry_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" parent="." instance=ExtResource( 2 )]
texture = ExtResource( 3 )

[node name="menu_area" parent="." instance=ExtResource( 4 )]

[node name="menu_title" parent="menu_area" instance=ExtResource( 5 )]
anchor_right = 1.0
margin_top = 68.0
margin_right = 0.0
margin_bottom = 92.0
bbcode_text = "[center][color=#f4e020]Encyclopedia[/color][/center]"
text = "Encyclopedia"

[node name="entry_icon_button" parent="menu_area" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = 104.0
margin_right = 27.0
margin_bottom = -150.0

[node name="previous_menu_button" parent="menu_area" instance=ExtResource( 7 )]
margin_left = 208.0
margin_top = 464.0
margin_right = 432.0
margin_bottom = 492.0
shortcut = ExtResource( 8 )
script = ExtResource( 9 )
button_text = "~!Previous Menu"
target_scene = "encyclopedia_icon_entries_menu"

